Basic skeleton added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>StarterKit: Angular</title>
+
+		<meta name="description" content="Angular part of Capgemini StarterKit programme.">
+		<meta name="author" content="Lukasz Sidorkiewicz, Przemyslaw Kedzierski">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +32,74 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section id="start">
+					<h3><strong>StarterKit: Angular</strong></h3>
+					<p>Introduction into Angular web framework</p>
+					<h2><img class="logo" src="./img/angular.png"></h2>
+					<p>
+						<small>Created by <a href="https://github.com/lsidorki">Lukasz Sidorkiewicz</a> / <a href="https://github.com/lsidorki">Przemyslaw Kedzierski</a></small>
+					</p>
+				</section>
+				<section id="agenda">
+					<h3>Agenda</h3>
+					<ol>
+						<li><a href="#/about">About Angular</a></li>
+						<li><a href="#/environment">Environment Setup</a></li>
+						<li><a href="#/module">Module</a></li>
+						<li><a href="#/dependncy-injection">Dependency Injection</a></li>
+						<li><a href="#/controllers">Controllers</a></li>
+						<li><a href="#/services-factories">Services and Factories</a></li>
+						<li><a href="#/useful-directives">Useful Directives</a></li>
+						<li><a href="#/backend-communication">Backend Communication</a></li>
+						<li><a href="#/routing">Routing</a></li>
+					</ol>
+				</section>
+				<section id="about">
+					<h3>About Angular (v. 4.0.0)</h3>
+					<small>
+					<ul>
+						<li>Smaller & Faster (will be still improved)</li>
+						<li>View Engine changes (generates less code)</li>
+						<li>Animation Package (moved to own package)</li>
+						<li>Improved *ngIf (if/else syntax) and *ngFor (assign local variables)</li>
+						<li>Angular Universal (allows developers to run Angular on a server)</li>
+						<li>TypeScript 2.1 and 2.2 compatibility</li>
+						<li>Packaging Changes</li>
+					</ul>
+					</small>
+				</section>
+				<section id="environment">
+					<h3>Setting Up the Environment</h3>
+				</section>
+				<section id="module">
+					<section id="module-basics">
+						<h3>Module</h3>
+					</section>
+					<section id="module-definition">
+						<h3>Module definition</h3>
+					</section>
+					<section id="module-root">
+						<h3>Root Module</h3>
+					</section>
+				</section>
+				<section id="dependncy-injection">
+					<h3>Dependency Injection</h3>
+				</section>
+				<section id="controllers">
+					<h3>Controller</h3>
+				</section>
+				<section id="services-factories">
+					<h3>Services</h3>
+				</section>
+				<section id="useful-directives">
+					<h3>Directives</h3>
+				</section>
+				<section id="backend-communication">
+					<h3>Backend Communication</h3>
+				</section>
+				<section id="routing">
+					<h3>Routing</h3>
+				</section>
 			</div>
 		</div>
 
