Presentation update: tasks distribution

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<section id="start">
 					<h3><strong>StarterKit: Angular</strong></h3>
 					<p>Introduction into Angular web framework</p>
-					<h2><img class="logo" src="./img/angular.png"></h2>
+					<h2><img class="logo" src="img/angular.png"></h2>
 					<p>
 						<small>Created by <a href="https://github.com/lsidorki">Lukasz Sidorkiewicz</a> / <a href="https://github.com/lsidorki">Przemyslaw Kedzierski</a></small>
 					</p>
@@ -70,35 +70,73 @@
 				</section>
 				<section id="environment">
 					<h3>Setting Up the Environment</h3>
+					<p>lsidorki</p>
 				</section>
 				<section id="module">
 					<section id="module-basics">
 						<h3>Module</h3>
+						<p>lsidorki</p>
 					</section>
 					<section id="module-definition">
 						<h3>Module definition</h3>
+						<p>lsidorki</p>
 					</section>
 					<section id="module-root">
 						<h3>Root Module</h3>
+						<p>lsidorki</p>
 					</section>
 				</section>
 				<section id="dependncy-injection">
 					<h3>Dependency Injection</h3>
+					<p>pkedzier</p>
 				</section>
 				<section id="controllers">
-					<h3>Controller</h3>
+					<h3>Components</h3>
+					<p>lsidorki</p>
 				</section>
 				<section id="services-factories">
 					<h3>Services</h3>
+					<p>pkedzier</p>
+				</section>
+				<section id="services-factories">
+					<h3>Lifecycle Hooks</h3>
+					<p>pkedzier</p>
 				</section>
 				<section id="useful-directives">
-					<h3>Directives</h3>
+					<h3>Templates</h3>
+					<p>lsidorki</p>
+				</section>
+				<section id="useful-directives">
+					<h3>Data manipulation and events</h3>
+					<p>lsidorki</p>
+				</section>
+				<section id="useful-directives">
+					<h3>Angular Forms</h3>
+					<p>lsidorki</p>
 				</section>
 				<section id="backend-communication">
-					<h3>Backend Communication</h3>
+					<h3>Backend Communication (HTTP Client)</h3>
+					<p>pkedzier</p>
 				</section>
 				<section id="routing">
 					<h3>Routing</h3>
+					<p>pkedzier</p>
+				</section>
+				<section id="routing">
+					<h3>Pipes (optional)</h3>
+					<p>pkedzier</p>
+				</section>
+				<section id="routing">
+					<h3>Security (optional)</h3>
+					<p>lsidorki</p>
+				</section>
+				<section id="routing">
+					<h3>Excercise</h3>
+					<p>Wypożyczalnia kaset VHS</p>
+					<p>Spis, wypożyczanie, oddawanie</p>
+					<p>podgląd, okładka, gif</p>
+					<p>Naliczanie kary (opóźnienie, nieprzewinięta kaseta checkbox, stan kasety, rejestracja osób)</p>
+					<p>Graficznie klimatyczna strona</p>
 				</section>
 			</div>
 		</div>
