Cleaned up agenda, environment setup added

--- a/index.html
+++ b/index.html
@@ -42,17 +42,24 @@
 				</section>
 				<section id="agenda">
 					<h3>Agenda</h3>
-					<ol>
-						<li><a href="#/about">About Angular</a></li>
-						<li><a href="#/environment">Environment Setup</a></li>
-						<li><a href="#/module">Module</a></li>
-						<li><a href="#/dependncy-injection">Dependency Injection</a></li>
-						<li><a href="#/components">Components</a></li>
-						<li><a href="#/services-factories">Services and Factories</a></li>
-						<li><a href="#/useful-directives">Useful Directives</a></li>
-						<li><a href="#/backend-communication">Backend Communication</a></li>
-						<li><a href="#/routing">Routing</a></li>
-					</ol>
+					<small>
+						<ol>
+							<li><a href="#/about">About Angular</a></li>
+							<li><a href="#/environment">Environment Setup</a></li>
+							<li><a href="#/module">Module</a></li>
+							<li><a href="#/dependncy-injection">Dependency Injection</a></li>
+							<li><a href="#/components">Components</a></li>
+							<li><a href="#/services">Services</a></li>
+							<li><a href="#/lifecycle">Lifecycle Hooks</a></li>
+							<li><a href="#/templates">Templates</a></li>
+							<li><a href="#/data-manipulation-events">Data manipulation and events</a></li>
+							<li><a href="#/forms">Angular Forms</a></li>
+							<li><a href="#/backend-communication">Backend Communication</a></li>
+							<li><a href="#/routing">Routing</a></li>
+							<li><a href="#/pipes">Pipes</a></li>
+							<li><a href="#/security">Security</a></li>
+						</ol>
+					</small>
 				</section>
 				<section id="about">
 					<h3>About Angular (v. 4.0.0)</h3>
@@ -69,8 +76,26 @@
 					</small>
 				</section>
 				<section id="environment">
+					<section id="environment-setup">
 					<h3>Setting Up the Environment</h3>
-					<p>lsidorki</p>
+					<small>
+						<p>Necessary tools:</p>
+						<ul>
+							<li>GIT</li>
+							<li>Node.js (NPM module)</li>
+							<li>IDE (Atom, Visual Studio Code, etc.)</li>
+						</ul>
+					</small>
+					</section>
+					<section id="environment-startup" data-markdown>
+						<h3>Quick Start</h3>
+						<p>
+							git clone https://github.com/angular/quickstart.git quickstart
+							cd quickstart
+							npm install
+							npm start
+						</p>
+					</section>
 				</section>
 				<section id="module">
 					<section id="module-basics">
@@ -136,11 +161,11 @@
 						</p>
 					</section>
 				</section>
-				<section id="services-factories">
+				<section id="services">
 					<h3>Services</h3>
 					<p>pkedzier</p>
 				</section>
-				<section id="services-factories">
+				<section id="lifecycle">
 					<h3>Lifecycle Hooks</h3>
 					<p>pkedzier</p>
 				</section>
@@ -178,11 +203,11 @@
 					</p>
 					</section>
 				</section>
-				<section id="useful-directives">
+				<section id="data-manipulation-events">
 					<h3>Data manipulation and events</h3>
 					<p>lsidorki</p>
 				</section>
-				<section id="useful-directives">
+				<section id="forms">
 					<h3>Angular Forms</h3>
 					<p>lsidorki</p>
 				</section>
@@ -194,15 +219,15 @@
 					<h3>Routing</h3>
 					<p>pkedzier</p>
 				</section>
-				<section id="routing">
+				<section id="pipes">
 					<h3>Pipes (optional)</h3>
 					<p>pkedzier</p>
 				</section>
-				<section id="routing">
+				<section id="security">
 					<h3>Security (optional)</h3>
 					<p>lsidorki</p>
 				</section>
-				<section id="routing">
+				<section id="excercise">
 					<h3>Excercise</h3>
 					<p>Wypożyczalnia kaset VHS</p>
 					<p>Spis, wypożyczanie, oddawanie</p>
