Added slides for Data Display and Events

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<section id="start">
 					<h3><strong>StarterKit: Angular</strong></h3>
 					<p>Introduction into Angular web framework</p>
-					<h2><img class="logo" src="img/angular.png"></h2>
+					<h2><img class="plain" src="img/angular.png"></h2>
 					<p>
 						<small>Created by <a href="https://github.com/lsidorki">Lukasz Sidorkiewicz</a> / <a href="https://github.com/lsidorki">Przemyslaw Kedzierski</a></small>
 					</p>
@@ -248,8 +248,26 @@
 					</section>
 				</section>
 				<section id="data-manipulation-events">
-					<h3>Data manipulation and events</h3>
-					<p>lsidorki</p>
+					<h3>Data display and events</h3>
+					<small>
+						<p>Displaying data:</p>
+						<ul>
+							<li>Interpolation</li>
+							<li>*ngFor</li>
+							<li>*ngIf</li>
+							<li>[ngStyle]</li>
+							<li>[ngClass]</li>
+							<li>[ngSwitch]</li>
+							<li>[ngPlural]</li>
+						</ul>
+						<p>User input events</p>
+						<ul>
+							<li>(click)</li>
+							<li>(keyup)</li>
+							<li>(blur)</li>
+							<li>$event</li>
+						</ul>
+					</small>
 				</section>
 				<section id="forms">
 					<h3>Angular Forms</h3>
