--- a/index.html
+++ b/index.html
@@ -325,12 +325,21 @@
 					<p>lsidorki</p>
 				</section>
 				<section id="excercise">
-					<h3>Excercise</h3>
-					<p>Wypożyczalnia kaset VHS</p>
-					<p>Spis, wypożyczanie, oddawanie</p>
-					<p>podgląd, okładka, gif</p>
-					<p>Naliczanie kary (opóźnienie, nieprzewinięta kaseta checkbox, stan kasety, rejestracja osób)</p>
-					<p>Graficznie klimatyczna strona</p>
+					<h3>Excercise: VHS Rental Service</h3>
+					<small>
+						<p>Create a Web Application for VHS Rental Service.</p>
+						<ol>
+							<li>Website consists of at least three separate pages: 'VHS Movies listing', 'Subscribed customers' and 'List of rented tapes'</li>
+							<li>Each VHS has its own info page, which consists of basic movie information, movie cover and gif from the movie.</li>
+							<li>All the listings can be sorted (date, rating, alphatebically) and filtered.</li>
+							<li>Administrator is able to rent tapes and collect them back.</li>
+							<li>Administrator collects money for each rental, but can also appli additional fee (Unrewinded tape, delay, broken tape, etc.).</li>
+							<li>During tape collection, user may also rate the movie with 5-star system.</li>
+							<li>Use Bootstrap CSS/controls and remember to keep the 90' style (very important)!</li>
+							<li>Use HTTP communication, modal windows and date picker for choosing date.</li>
+							<li>Keep the system user friendly.</li>
+						</ol>
+					</small>
 				</section>
 			</div>
 		</div>
