Slides restructured. Sections removed.

--- a/index.html
+++ b/index.html
@@ -209,10 +209,6 @@
 						</p>
 					</section>
 				</section>
-				<section id="lifecycle">
-					<h3>Lifecycle Hooks</h3>
-					<p>pkedzier</p>
-				</section>
 				<section id="templates">
 					<section id="templates-basics">
 						<h3>Templates</h3>
@@ -358,12 +354,8 @@
 					</section>
 				</section>
 				<section id="pipes">
-					<h3>Pipes (optional)</h3>
-					<p>pkedzier</p>
-				</section>
-				<section id="security">
-					<h3>Security (optional)</h3>
-					<p>lsidorki</p>
+					<h3>Live demo</h3>
+					<h2><img class="plain" src="img/livedemo.png"></h2>
 				</section>
 				<section id="excercise">
 					<h3>Excercise: VHS Rental Service</h3>
