--- a/index.html
+++ b/index.html
@@ -45,19 +45,18 @@
 					<small>
 						<ol>
 							<li><a href="#/about">About Angular</a></li>
-							<li><a href="#/environment">Environment Setup</a></li>
+							<li><a href="#/environment">Setting Up the Environment</a></li>
 							<li><a href="#/module">Module</a></li>
 							<li><a href="#/dependncy-injection">Dependency Injection</a></li>
 							<li><a href="#/components">Components</a></li>
 							<li><a href="#/services">Services</a></li>
-							<li><a href="#/lifecycle">Lifecycle Hooks</a></li>
 							<li><a href="#/templates">Templates</a></li>
-							<li><a href="#/data-manipulation-events">Data manipulation and events</a></li>
+							<li><a href="#/data-manipulation-events">Displaying data and events</a></li>
 							<li><a href="#/forms">Angular Forms</a></li>
 							<li><a href="#/backend-communication">Backend Communication</a></li>
 							<li><a href="#/routing">Routing</a></li>
-							<li><a href="#/pipes">Pipes</a></li>
-							<li><a href="#/security">Security</a></li>
+							<li><a href="#/livedemo">Live Demo</a></li>
+							<li><a href="#/excercise">Excercise</a></li>
 						</ol>
 					</small>
 				</section>
@@ -353,7 +352,7 @@
 						</small>
 					</section>
 				</section>
-				<section id="pipes">
+				<section id="livedemo">
 					<h3>Live demo</h3>
 					<h2><img class="plain" src="img/livedemo.png"></h2>
 				</section>
