--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<p>Introduction into Angular web framework</p>
 					<h2><img class="plain" src="img/angular.png"></h2>
 					<p>
-						<small>Created by <a href="https://github.com/lsidorki">Lukasz Sidorkiewicz</a> / <a href="https://github.com/lsidorki">Przemyslaw Kedzierski</a></small>
+						<small>Created by <a href="https://github.com/lsidorki">Lukasz Sidorkiewicz</a> / <a href="https://github.com/pkedzier">Przemyslaw Kedzierski</a></small>
 					</p>
 				</section>
 				<section id="agenda">
@@ -48,6 +48,7 @@
 							<li><a href="#/environment">Setting Up the Environment</a></li>
 							<li><a href="#/module">Module</a></li>
 							<li><a href="#/dependncy-injection">Dependency Injection</a></li>
+							<li><a href="#/lifecycle">Lifecycle</a></li>
 							<li><a href="#/components">Components</a></li>
 							<li><a href="#/services">Services</a></li>
 							<li><a href="#/templates">Templates</a></li>
@@ -159,7 +160,7 @@
 				</section>
 				<section id="lifecycle">
 					<section id="lifecycle-definition">
-						<h3>Lifecycle Hooks</h3>
+						<h3>Lifecycle</h3>
 						<small>
 							<p>A component has a lifecycle managed by Angular.</p>
 							<p>A directive has the same set of lifecycle hooks, minus the hooks that are specific to component content and views. </p>
